# navigator-browser

./: .gitignore  Cargo.toml  Cargo_windows.toml  README.md  ROADMAP.md  TAURI_SETUP.md  install_rust_windows.ps1  test_setup.ps1
.cargo/: config.toml
.claude/: settings.local.json
backup_gtk/presentation/: browser_window.rs  mod.rs  url_bar.rs
docs/: ARCHITECTURE.md  REAL_BROWSER_IMPLEMENTATION.md  SECURITY.md  WINDOWS_SETUP.md  WINDOWS_WORKAROUND.md
examples/: test_browser.rs
src/: lib.rs  main.rs
src/application/: mod.rs  state.rs  use_cases.rs
src/domain/: entities.rs  mod.rs  repositories.rs  services.rs  value_objects.rs
src/infrastructure/: database.rs  mod.rs  network.rs  rendering.rs  rendering_mock.rs  security.rs
src/presentation/: vertical_tabs.rs
src/ui/: address_bar.rs  mod.rs  renderer.rs  text_renderer.rs  window.rs
